# FastAPI-fullstack-blog

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
app/: api.py  database.py  enums.py  helpers.py  hotreload.py  main.py  settings.py
app/routes/: article.py  home.py  posts.py
app/static/css/: cookiebanner.css
app/templates/: base.html  home.html
app/templates/components/: article.html  cookiebanner.html  postlist.html
app/tests/: conftest.py  test_markdown.py  test_post_sorting.py  test_routes.py  test_sortposts.py
app/tests/samples/: codeblocks.html  codeblocks.md  valid_markdown.html
docs/: index.md
docs/getting_started/: build_and_run_the_app.md  configure_the_environment.md  write_your_first_article.md
posts/1/: content.md
posts/2/: content.md
posts/3/: content.md
posts/4/: content.md
src/: app.py  helpers.py
src/core/: logging.py  settings.py  templates.py
src/core/database/: database.py  session.py
src/routes/: about.py  article.py  home.py  posts.py  session.py
src/static/: cookie.js  postlist-sortchange.js  postlist.js
src/static/scss/: cookie-banner.scss  markdown.scss  style.scss  styles.scss
src/templates/: base.html  home.html
src/templates/components/: article.html  cookie-banner.html  footer.html  post-item.html  (+2 more)
src/tests/: conftest.py  test_markdown.py  test_post_sorting.py  test_routes.py
src/utils/: hotreload.py  sass.py  word_counter.py
tests/: test_markdown.py  test_post_sorting.py
(+28 files in other folders)
