[tool.poetry]
name = "yonei-dev"
version = "0.1.0"
description = "A semi-static markdown blog written in FastAPI"
authors = ["y0nei <xyz.im@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
jinja2 = "^3.1.2"
markdown = "^3.4.3"
pygments = "^2.14.0"
motor = "^3.1.1"
itsdangerous = "^2.1.2"

[tool.poetry.group.dev.dependencies]
arel = "==0.2.*"
pytest = "^7.2.2"
httpx = "^0.23.3"
mongomock-motor = "^0.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
