[tool.poetry]
name = "yonei.dev"
version = "0.9.1"
description = "A semi-static markdown blog written in FastAPI"
authors = ["y0nei <xyz.im@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
jinja2 = "^3.1.2"
markdown = "<3.4"
motor = "^3.1.1"
itsdangerous = "^2.1.2"
prometheus-fastapi-instrumentator = "^6.0.0"
gitpython = "^3.1.32"
mkdocs = "^1.4.3"

[tool.poetry.group.markdown.dependencies]
pygments = "^2.14.0"
pymdown-extensions = "^10.0.1"
markdown-checklist = "^0.4.4"
markdown-del-ins = "^1.0.0"
markdown-sub-sup = "^0.0.3"

[tool.poetry.group.dev.dependencies]
arel = "==0.2.*"
pytest = "^7.2.2"
httpx = "^0.23.3"
mongomock-motor = "^0.0.18"
pytest-asyncio = "^0.21.0"
libsass = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
